--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# Secret Varaibles required in GitHub secrets: TWINE_USERNAME, TWINE_PASSWORD
 
-name: CI
+name: CI - PYPI
 
 # Controls when the action will run. 
 on:
@@ -27,9 +27,9 @@ jobs:
 
       - name: pip-install-test
         run: |
-          sudo pip install -U pip && sudo pip install -U setuptools wheel twine
-          sudo python setup.py install
-          aloha
+          sudo pip install -Uq pip && sudo pip install -Uq setuptools wheel twine
+          sudo python setup.py install clean --all
+          aloha info -v
 
       - name: pypi-publish
         env:
