--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,17 @@
-*.py    text    eol=lf
-*.sh    text    eol=lf
-*.md    text    eol=lf
-*.ipynb text    eol=lf
+# Ignore all differences in line endings
+*.md        text  eol=lf
+*.py        text  eol=lf
+*.sh        text  eol=lf
+*.conf      text  eol=lf
+*.yml       text  eol=lf
+*.ipynb     text  eol=lf
+Dockerfile* text  eol=lf
+
+*.tgz   filter=lfs diff=lfs merge=lfs -text
+*.h5    filter=lfs diff=lfs merge=lfs -text
+*.jsonl filter=lfs diff=lfs merge=lfs -text
+*.bin   filter=lfs diff=lfs merge=lfs -text
+*.png   filter=lfs diff=lfs merge=lfs -text
+*.jpg   filter=lfs diff=lfs merge=lfs -text
+*.jpeg  filter=lfs diff=lfs merge=lfs -text
+*.webp  filter=lfs diff=lfs merge=lfs -text
