--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -1,6 +1,6 @@
 # Secret Variables required in GitHub secrets: TWINE_USERNAME, TWINE_PASSWORD / TWINE_USERNAME_TEST, TWINE_PASSWORD_TEST
 
-name: CI - PYPI
+name: build
 
 # Controls when the action will run. 
 on:
@@ -34,7 +34,7 @@ jobs:
           cd src
           sudo python3 setup.py sdist bdist_wheel
           pip3 install ./dist/*.tar.gz
-          aloha info -v
+          aloha info
           pip3 list | sort
 
       - name: pypi-publish
